리다이렉트 URI

--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -14,7 +14,7 @@
     <script>
         function kakao_Login(){
             Kakao.Auth.authorize({
-            redirectUri: 'https://tmxk061.github.io/'
+            redirectUri: 'https://tmxk061.github.io/kakao_Login/kakao_test/loginTest.html'
             });
         }
       
