--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Kakao JavaScript SDK</title>
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <!-- <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script>
         // SDK를 초기화 합니다. 사용할 앱의 JavaScript 키를 설정해 주세요.
         Kakao.init('08f9c3456cd84f0e93a2f99a212dc02a');
@@ -18,9 +18,27 @@
             });
         }
       
-    </script>
+    </script> -->
 </head>
 <body>
-    <button onclick="kakao_Login();">카카오 로그인을 해봅시당</button>
+    <a id="custom-login-btn" href="javascript:loginWithKakao()">
+        <img
+          src="//k.kakaocdn.net/14/dn/btqCn0WEmI3/nijroPfbpCa4at5EIsjyf0/o.jpg"
+          width="222"
+        />
+      </a>
+      <script type="text/javascript">
+        function loginWithKakao() {
+          Kakao.Auth.login({
+            success: function(authObj) {
+              alert(JSON.stringify(authObj))
+            },
+            fail: function(err) {
+              alert(JSON.stringify(err))
+            },
+          })
+        }
+      </script>
+      
 </body>
 </html>
