--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Kakao JavaScript SDK</title>
-    <!-- <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script>
         // SDK를 초기화 합니다. 사용할 앱의 JavaScript 키를 설정해 주세요.
         Kakao.init('08f9c3456cd84f0e93a2f99a212dc02a');
@@ -11,7 +11,7 @@
         console.log(Kakao.isInitialized());
     </script>
 
-    <script>
+    <!-- <script>
         function kakao_Login(){
             Kakao.Auth.authorize({
             redirectUri: 'https://tmxk061.github.io/kakao_Login/kakao_test/loginTest.html'
