--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -4,55 +4,34 @@
     <meta charset="utf-8"/>
     <title>Kakao JavaScript SDK</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <script>
-        // SDK를 초기화 합니다. 사용할 앱의 JavaScript 키를 설정해 주세요.
-        Kakao.init('08f9c3456cd84f0e93a2f99a212dc02a');
-        // SDK 초기화 여부를 판단합니다.
-        console.log(Kakao.isInitialized());
-    </script>
-
-    <!-- <script>
-        function kakao_Login(){
-            Kakao.Auth.authorize({
-            redirectUri: 'https://tmxk061.github.io/kakao_Login/kakao_test/loginTest.html'
-            });
-        }
-      
-    </script> -->
-
     <script type="text/javascript">
-        function loginWithKakao() {
-          Kakao.Auth.login({
-            success: function(authObj) {
-            //   alert(JSON.stringify(authObj))
-            stateCall();
-            },
-            fail: function(err) {
-              //alert(JSON.stringify(err))
-            },
-          })
-        }
+    // SDK를 초기화 합니다. 사용할 앱의 JavaScript 키를 설정해 주세요.
+    Kakao.init('08f9c3456cd84f0e93a2f99a212dc02a');
+        // SDK 초기화 여부를 판단합니다.
+    console.log(Kakao.isInitialized());
 
-        function stateCall(){
-            let data = '';
-
-            Kakao.API.request({
-                url: '/v2/user/me',
-                success: function(response) {
-                    data = response;
-                },
-                fail: function(error) {
-                    console.log(error);
-                }
-            });
-
-            console.log('카카오 계정 정보', data);
-        }
-
-      </script>
+    function loginFormWithKakao() { 
+        Kakao.Auth.loginForm({ 
+            success: function(authObj) { 
+                Kakao.API.request({ 
+                    url: '/v2/user/me', 
+                    success: 
+                    function(res) { 
+                        console.log(res.kakao_account['email']) 
+                        console.log(res.id) 
+                    } 
+                }) 
+            }, 
+            
+            fail: function(err) { 
+                alert(JSON.stringify(err)) 
+            }, 
+        }) 
+    }
+    </script>
 </head>
 <body>
-    <a id="custom-login-btn" href="javascript:loginWithKakao()">
+    <a id="custom-login-btn" href="javascript:loginFormWithKakao()">
         <img
           src="//k.kakaocdn.net/14/dn/btqCn0WEmI3/nijroPfbpCa4at5EIsjyf0/o.jpg"
           width="222"
