--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -14,6 +14,7 @@
     Kakao.Auth.authorize({
       redirectUri: 'https://tmxk061.github.io/kakao_Login/kakao_test/loginTest.html'
     })
+    displayToken();
   }
   // 아래는 데모를 위한 UI 코드입니다.
   displayToken()
