--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -9,24 +9,9 @@
     Kakao.init('08f9c3456cd84f0e93a2f99a212dc02a');
         // SDK 초기화 여부를 판단합니다.
     console.log(Kakao.isInitialized());
-    </script>
-</head>
-<body>
-    <a id="custom-login-btn" href="javascript:loginWithKakao()">
-        <img
-          src="//k.kakaocdn.net/14/dn/btqCn0WEmI3/nijroPfbpCa4at5EIsjyf0/o.jpg"
-          width="222"
-        />
-      </a>
-      <p id="token-result"></p>
-      <script type="text/javascript">
-        function loginWithKakao() {
-          Kakao.Auth.authorize({
-            redirectUri: 'https://tmxk061.github.io/kakao_Login//kakao_test/loginTest'
-          })
-        }
-        // 아래는 데모를 위한 UI 코드입니다.
-        displayToken()
+
+    // 아래는 데모를 위한 UI 코드입니다.
+    displayToken()
         function displayToken() {
           const token = getCookie('authorize-access-token')
           if(token) {
@@ -44,6 +29,24 @@
           const value = "; " + document.cookie;
           const parts = value.split("; " + name + "=");
           if (parts.length === 2) return parts.pop().split(";").shift();
+        }
+
+    </script>
+</head>
+<body>
+    <a id="custom-login-btn" href="javascript:loginWithKakao()">
+        <img
+          src="//k.kakaocdn.net/14/dn/btqCn0WEmI3/nijroPfbpCa4at5EIsjyf0/o.jpg"
+          width="222"
+        />
+      </a>
+      <p id="token-result"></p>
+      <script type="text/javascript">
+        function loginWithKakao() {
+          Kakao.Auth.authorize({
+            redirectUri: 'https://tmxk061.github.io/kakao_Login//kakao_test/loginTest'
+          })
+          displayToken();
         }
       </script>
 </body>
