--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -14,6 +14,7 @@
           Kakao.Auth.authorize({
             redirectUri: 'https://tmxk061.github.io/kakao_Login//kakao_test/loginTest'
           });
+          console.log(response);
           Kakao.API.request({
             url: '/v2/user/me',
             success: function(response) {
