--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -5,31 +5,10 @@
     <title>Kakao JavaScript SDK</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script type="text/javascript">
-    // SDK를 초기화 합니다. 사용할 앱의 JavaScript 키를 설정해 주세요.
-    Kakao.init('08f9c3456cd84f0e93a2f99a212dc02a');
+        // SDK를 초기화 합니다. 사용할 앱의 JavaScript 키를 설정해 주세요.
+        Kakao.init('08f9c3456cd84f0e93a2f99a212dc02a');
         // SDK 초기화 여부를 판단합니다.
-    console.log(Kakao.isInitialized());
-
-    function loginWithKakao() {
-          Kakao.Auth.authorize({
-            redirectUri: 'https://tmxk061.github.io/kakao_Login//kakao_test/loginTest'
-          });
-          console.log(response);
-          Kakao.API.request({
-            url: '/v2/user/me',
-            success: function(response) {
-                console.log(response);
-            },
-            fail: function(error) {
-                console.log(error);
-            }
-        });
-          
-    }
-
-    function callState(){
-        
-    }
+        console.log(Kakao.isInitialized());
     </script>
 
 </head>
@@ -40,5 +19,17 @@
           width="222"
         />
       </a>
+      <script type="text/javascript">
+        function loginWithKakao() {
+          Kakao.Auth.login({
+            success: function(authObj) {
+              alert(JSON.stringify(authObj))
+            },
+            fail: function(err) {
+              alert(JSON.stringify(err))
+            },
+          })
+        }
+      </script>
 </body>
 </html>
