--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -23,7 +23,16 @@
         function loginWithKakao() {
           Kakao.Auth.login({
             success: function(authObj) {
-              alert(JSON.stringify(authObj))
+              alert(JSON.stringify(authObj));
+              Kakao.API.request({
+                    url: '/v2/user/me',
+                    success: function(response) {
+                        console.log(response);
+                    },
+                    fail: function(error) {
+                        console.log(error);
+                    }
+                });
             },
             fail: function(err) {
               alert(JSON.stringify(err))
