--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -14,12 +14,13 @@
 
 </head>
 <body>
-    <a id="custom-login-btn" href="javascript:loginWithKakao()">
+    <a id="custom-login-btn" onclick="loginWithKakao()">
         <img
           src="//k.kakaocdn.net/14/dn/btqCn0WEmI3/nijroPfbpCa4at5EIsjyf0/o.jpg"
           width="222"
         />
       </a>
+
       <!-- <script type="text/javascript">
         function loginWithKakao() {
           Kakao.Auth.login({
