--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -10,8 +10,7 @@
         // SDK 초기화 여부를 판단합니다.
         console.log(Kakao.isInitialized());
     </script>
-    <link href="js/kakaoAPI.js">
-
+    <script src="js/kakaoAPI.js"></script>
 </head>
 <body>
     <a id="custom-login-btn" onclick="loginWithKakao()">
