--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -13,12 +13,12 @@
     <script src="js/kakaoAPI.js"></script>
 </head>
 <body>
-    <a id="custom-login-btn" src="javascript:loginWithKakao()">
-        <img
-          src="//k.kakaocdn.net/14/dn/btqCn0WEmI3/nijroPfbpCa4at5EIsjyf0/o.jpg"
-          width="222"
-        />
-      </a>
+  <a id="custom-login-btn" href="javascript:loginWithKakao()">
+    <img
+      src="//k.kakaocdn.net/14/dn/btqCn0WEmI3/nijroPfbpCa4at5EIsjyf0/o.jpg"
+      width="222"
+    />
+  </a>
 
       <!-- <script type="text/javascript">
         function loginWithKakao() {
