--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -19,7 +19,9 @@
       width="222"
     />
   </a>
-  899
+  <button onclick="LogoutTest()">로그아웃 버튼</button>
+  <button onclick="CallId()">id 확인 버튼</button>
+  456
 
       <!-- <script type="text/javascript">
         function loginWithKakao() {
