--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -15,8 +15,8 @@
   </a>
   <button onclick="LogoutTest()">로그아웃 버튼</button>
   <button onclick="CallId()">id 확인 버튼</button>
-  <button onclick="MessageTest()">메시지 보내기</button>
- 112
+  <button onclick="MessageTest()">채널 가입 버튼</button>
+ 112ㅊ
 
      
 </body>
