--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -24,11 +24,10 @@
   <script type="text/javascript">
     function addChannel() {
       Kakao.Channel.addChannel({
-        channelPublicId: '_xcLqmC',
+        channelPublicId: '_mxmpFK',
       })
     }
   </script>
- 112ㅊ123123123
 
      
 </body>
