--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -5,6 +5,7 @@
     <title>Kakao JavaScript SDK</title>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script src="js/kakaoAPI.js"></script>
+    <script src="js/Login_test.js"></script>
 </head>
 <body>
   <a id="custom-login-btn" href="javascript:loginWithKakao()">
@@ -13,7 +14,7 @@
       width="222"
     />
   </a>
-  <button onclick="LogoutTest()">로그아웃 버튼</button>
+  <button onclick="testFun()">로그아웃 버튼</button>
   <button onclick="CallId()">id 확인 버튼</button>
   <!-- <button onclick="MessageTest()">채널 가입 버튼</button> -->
   <a id="channel-add-button" href="#" onclick="void addChannel();">
