--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -8,7 +8,7 @@
     <script src="js/Login_test.js"></script>
 </head>
 <body>
-  <a id="custom-login-btn" href="javascript:loginWithKakao()">
+  <a id="custom-login-btn" href="javascript:LoginRogic()">
     <img
       src="//k.kakaocdn.net/14/dn/btqCn0WEmI3/nijroPfbpCa4at5EIsjyf0/o.jpg"
       width="222"
@@ -17,11 +17,7 @@
   <button onclick="testFun()">로그아웃 버튼</button>
   <button onclick="CallId()">id 확인 버튼</button>
   <!-- <button onclick="MessageTest()">채널 가입 버튼</button> -->
-  <a id="channel-add-button" href="#" onclick="void addChannel();">
-    <img
-      src="/tool/resource/static/img/button/channel/add/channel_add_small.png"
-    />
-  </a>
+  
   <script type="text/javascript">
     function addChannel() {
       Kakao.Channel.addChannel({
@@ -29,7 +25,7 @@
       })
     }
   </script>
-124515
+9090989089
      
 </body>
 </html>
