--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -8,7 +8,7 @@
     <script src="js/Login_test.js"></script>
 </head>
 <body>
-  <a id="custom-login-btn" href="javascript:LoginRogic()">
+  <a id="custom-login-btn" href="javascript:loginWithKakao_main()">
     <img
       src="//k.kakaocdn.net/14/dn/btqCn0WEmI3/nijroPfbpCa4at5EIsjyf0/o.jpg"
       width="222"
@@ -25,7 +25,7 @@
       })
     }
   </script>
-11111
+1241251235
      
 </body>
 </html>
