--- a/kakao_test/loginTest.html
+++ b/kakao_test/loginTest.html
@@ -8,13 +8,15 @@
     <script src="js/Login_test.js"></script>
 </head>
 <body>
-  <a id="custom-login-btn" href="javascript:loginWithKakao_main()">
+  <!-- <a id="custom-login-btn" href="javascript:loginWithKakao_main()">
     <img
       src="//k.kakaocdn.net/14/dn/btqCn0WEmI3/nijroPfbpCa4at5EIsjyf0/o.jpg"
       width="222"
     />
-  </a>
-  <button onclick="testFun()">로그아웃 버튼</button>
+  </a> -->
+  <button onclick="loginWithKakao_main()">로그인 버튼</button>
+  <button onclick="loginWithKakao_Account()">회원가입 버튼</button>
+  <button onclick="LogoutTest()">로그아웃 버튼</button>
   <button onclick="CallId()">id 확인 버튼</button>
   <!-- <button onclick="MessageTest()">채널 가입 버튼</button> -->
   
@@ -25,7 +27,7 @@
       })
     }
   </script>
-로그인테스트하는중
+로그인테스트하는중중주루중중모리장단
      
 </body>
 </html>
